--- a/.dagger/cli_as_daemon.conf
+++ b/.dagger/cli_as_daemon.conf
@@ -1,5 +1,6 @@
 #!/sbin/openrc-run
 name="Run tunnel client"
-command="sleep 5 && iperf3 -c 192.168.11.1 -B 192.168.10.1 -t 30"
+command="iperf3"
+command_args="-c 192.168.11.1 -B 192.168.10.1 -t 30"
 command_background=true
 pidfile="/run/run_cli.pid"
