--- a/.dagger/srv_as_daemon.conf
+++ b/.dagger/srv_as_daemon.conf
@@ -1,5 +1,6 @@
 #!/sbin/openrc-run
 name="Run tunnel server"
-command="iperf3 -s -B 192.198.10.1"
+command="iperf3"
+command_args="-s -B 192.198.10.1"
 command_background=true
 pidfile="/run/run_srv.pid"
