broken pipe bad file descriptor huh

--- a/tcp_to_tun/srv_as_daemon.conf
+++ b/tcp_to_tun/srv_as_daemon.conf
@@ -8,7 +8,7 @@
 # Short-Description: Run tunnel client
 ### END INIT INFO
 
-NAME="tunnel-client"
+NAME="tunnel-server"
 DAEMON="/bin/srv"
 PIDFILE="/var/run/tunnel-server.pid"
 
