--- a/tun_to_tcp/Dockerfile
+++ b/tun_to_tcp/Dockerfile
@@ -6,7 +6,7 @@ COPY ./cli_as_daemon.conf /etc/init.d/tunnel-client
 
 
 RUN apt update
-RUN apt install -y iperf3 iproute2 openrc golang sudo htop
+RUN apt install -y iperf3 iproute2 openrc golang sudo htop inetutils-ping
 RUN chmod +x /bin/cli
 RUN chmod +x /etc/init.d/tunnel-client
 RUN sudo rc-update add tunnel-client default
